	changed to work with generic list container

	* fvwm/module_list.c (module_insert):
	(module_list_insert):
	(module_remove):
	(module_list_remove):
	(module_count):
	(module_list_len):
	renamed as list handling functions

	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_list.h:
	* fvwm/module_list.c (module_alloc):
	(do_execute_module):
	removed useless is_cmdline_module stuff

2007-08-05  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/functions.c:
	* fvwm/functable.c:
	added empty functions to replace CMD_Dummy

	* configure.ac:
	use subordinate Makefile.ams instead of iuncluding files from other
	dirs

	* configure.ac:
	removed FVWMNAMEUCASE

	* configure.ac:
	make distcheck fix

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS):
	force --enable-htmldoc on "make distcheck"

	* fvwm/events.c (HandleEnterNotify):
	(HandleLeaveNotify):
	properly generate enter_window and leave_window events for FvwmEvent

2007-08-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (GetOnePositionArgument):
	(__get_shift)
	(ParsePositionArgumentSuffix):
	code cleanup

2007-07-31  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (GetOnePositionArgument):
	fixed position calculation with the "w" prefix (move w-1 w-1).
	(GetOnePositionArgument):
	code cleanup

2007-07-26  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/menus.c (__copy_down, __check_for_delimiter)
	(scanForStrings):
	reduce indentation level
	add comment to explain why suppressing the warning is right

2007-07-26  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/ewmh_events.c (ewmh_MoveResizeWindow):
	fixed using uninitialized variable

	* fvwm/menus.c (scanForStrings):
	suppress compiler warning for now

	* fvwm/move_resize.c (resize_move_window):
	(AnimatedMoveAnyWindow):
	(__move_window):
	(__resize_window):
	(CMD_Maximize):
	* fvwm/module_interface.c (__get_allowed_actions):
	* fvwm/menuitem.c (menuitem_paint):
	* fvwm/icons.c (CMD_Iconify):